[tool.poetry]
name = "pulumi-demo"
version = "0.1.0"
description = ""
authors = ["Ariel Eusebi <ariel.nearsure@impel.io>"]
readme = "README.md"
packages = [
	{include = "pulumi_demo"},
	{include = "asg", from = "modules"},
]

[tool.poetry.dependencies]
python = "^3.10"
pulumi = "^3.78.1"
pulumi-aws = "^5.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
